# rules_android_cc_test

./: BUILD  MODULE.bazel  README.md  WORKSPACE  android_cc_test.sh.tpl  android_cc_test_wrapper.sh  defs.bzl
sample/: .bazelrc  .gitignore  BUILD  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod
