###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_android_cc_test", version = "0.0.1")
local_path_override(module_name="rules_android_cc_test", path="../")

bazel_dep(name = "googletest", version = "1.15.2")